# spotify-sync-qqmusic

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync.yml
scripts/: bootstrap_qq_login.py  bootstrap_spotify.py
src/: config.py  db.py  diff_engine.py  incremental.py  main.py  matcher.py  musicbrainz_client.py  qq_qr_login.py  qqmusic_client.py  report.py  setup_wizard.py  spotify_client.py  spotify_oauth.py  sync_service.py  text_util.py
tests/: test_db.py  test_diff_engine.py  test_incremental.py  test_matcher.py  test_musicbrainz_client.py  test_qqmusic_client.py  test_spotify_client.py  test_sync_service.py
