[project]
name = "spotify-qq-sync"
version = "0.3.0"
description = "One-way daily sync from a Spotify playlist to a QQ Music playlist."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "jiaweizhang1995", email = "CarfagnoArcino@gmail.com" }]
dependencies = [
    "requests>=2.31",
    "qqmusic-api-python>=0.5.2",
    "python-dotenv>=1.0",
    "anyio>=4.0",
    "qrcode>=7.4",
    "Pillow>=10.0",
    "zxing-cpp>=2.2",
]

[project.scripts]
spotify-sync = "src.main:main"

[dependency-groups]
dev = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
